# binding-constraint

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
binding_constraint/: __init__.py  cli.py  io.py  model.py  render.py  scoring.py
data/fixture_weights/: tsmc-arizona.json
docs/: first-pr.md
plans/: tsmc-arizona.json
reports/: 2026-06-tsmc-arizona.jsonl
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
tests/: test_binding_constraint.py
